--- a/deploy/kubernetes/openfaas-sqs-connector-dep.yaml
+++ b/deploy/kubernetes/openfaas-sqs-connector-dep.yaml
@@ -1,3 +1,10 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: openfaas-sqs-connector
+  namespace: openfaas
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -55,6 +62,7 @@ spec:
           mountPath: /secret
       securityContext:
         fsGroup: 65534
+      serviceAccountName: openfaas-sqs-connector
       volumes:
       - name: basic-auth
         secret:
