--- a/helm/openfaas-sqs-connector/templates/deployment.yaml
+++ b/helm/openfaas-sqs-connector/templates/deployment.yaml
@@ -38,6 +38,11 @@ spec:
         - "{{ .Values.topicRefreshInterval }}"
         - --visibility-timeout
         - "{{ .Values.visibilityTimeout }}"
+        env:
+        - name: basic_auth
+          value: "true"
+        - name: secret_mount_path
+          value: /secret
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         securityContext:
@@ -49,6 +54,14 @@ spec:
           runAsGroup: 65534
           runAsNonRoot: true
           runAsUser: 65534
+        volumeMounts:
+        - name: basic-auth
+          readOnly: true
+          mountPath: /secret
       securityContext:
         fsGroup: 65534
       serviceAccountName: {{ include "openfaas-sqs-connector.fullname" . }}
+      volumes:
+      - name: basic-auth
+        secret:
+          secretName: basic-auth
