--- a/helm/openfaas-sqs-connector/templates/deployment.yaml
+++ b/helm/openfaas-sqs-connector/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
   name: {{ include "openfaas-sqs-connector.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ include "openfaas-sqs-connector.name" . }}
