Allow for specifying the AWS SQS endpoint URL.
Signed-off-by: Bruno Miguel Custódio <brunomcustodio@gmail.com>

--- a/helm/openfaas-sqs-connector/templates/deployment.yaml
+++ b/helm/openfaas-sqs-connector/templates/deployment.yaml
@@ -22,6 +22,8 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         args:
+        - --endpoint
+        - "{{ .Values.endpoint }}"
         - --log-level
         - "{{ .Values.logLevel }}"
         - --max-number-of-messages
