--- a/helm/openfaas-sqs-connector/values.yaml
+++ b/helm/openfaas-sqs-connector/values.yaml
@@ -1,6 +1,7 @@
+endpoint: ""
 image:
   repository: form3tech/openfaas-sqs-connector
-  tag: 1.0.1
+  tag: 1.1.0
 logLevel: info
 maxNumberOfMessages: 1
 maxWaitTime: 1
